[package]
name = "rivetdb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.1"

[dev-dependencies]
tempfile = "3.10"
